--- a/styles/new.css
+++ b/styles/new.css
@@ -30,3 +30,14 @@ a:hover {
 	display:none;
 }
 
+ul{
+	background-color: #DCDCDC;
+}
+
+aside {
+	background-color: #DCDCDC;
+
+}
+header{
+	background-color: #DCDCDC;
+}
